--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: "3.10"
+version: "3.12"
 services:
   app:
     build: .
     volumes:
-      - .:/proje
+      - .:/home/OtelApp
     ports:
       - 8000:8000
     image: app:django
-    container_name: OtelWebApplications
+    container_name: OtelApp
     command: python manage.py runserver 0.0.0.0:8000
