--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,11 @@
-arrow==1.2.3
 asgiref==3.7.2
-async-timeout==4.0.3
-backports.zoneinfo==0.2.1
-binaryornot==0.4.4
-certifi==2023.7.22
-chardet==5.2.0
-charset-normalizer==3.2.0
-click==8.1.7
-cookiecutter==2.3.0
-Django==4.2.3
-django-ckeditor==6.7.0
-django-cors-headers==4.2.0
-django-debug-toolbar==4.2.0
-django-dotenv==1.4.2
-django-filter==23.2
-django-js-asset==2.1.0
-django-redis==5.3.0
-django-request==1.6.3
-django-tailwind==3.6.0
+Django==4.2.6
+django-cors-headers==4.3.0
+django-filter==23.3
 djangorestframework==3.14.0
-djangorestframework-jsonapi==6.1.0
-idna==3.4
-importlib-metadata==6.8.0
-inflection==0.5.1
-Jinja2==3.1.2
-Markdown==3.4.4
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-mdurl==0.1.2
-Pillow==10.0.0
-Pygments==2.16.1
-python-dateutil==2.8.2
+Markdown==3.5
+Pillow==10.1.0
 python-dotenv==1.0.0
-python-slugify==8.0.1
-pytz==2023.3
-PyYAML==6.0.1
-redis==5.0.0
-requests==2.31.0
-rich==13.5.2
-six==1.16.0
+pytz==2023.3.post1
+setuptools==68.2.2
 sqlparse==0.4.4
-text-unidecode==1.3
-typing_extensions==4.7.1
-urllib3==2.0.4
-zipp==3.16.2
